--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,53 +10,54 @@ android {
         versionCode 1
         versionName "1.0"
     }
-        buildTypes {
-            release {
-                minifyEnabled false
-                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            }
-        }
-
-        buildscript {
-            repositories {
-                google() // here
-                mavenCentral()
-            }
-            dependencies {
-                classpath 'com.android.tools.build:gradle:7.2.1'
-            }
-        }
-        allprojects {
-            repositories {
-                google() // and here
-                mavenCentral()
-            }
-        }
-        dependencies {
-            implementation fileTree(dir: 'libs', include: ['*.jar'])
-            implementation 'androidx.preference:preference:1.2.0'
-            implementation 'androidx.appcompat:appcompat:1.4.2'
-            implementation 'com.google.android.material:material:1.6.1'
-            implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-            implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-            // Displaying images
-            implementation 'com.github.bumptech.glide:glide:3.7.0'
-            testImplementation 'junit:junit:4.13.2'
-            androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-            androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-            // Import the Firebase BoM
-            implementation platform('com.google.firebase:firebase-bom:30.1.0')
-
-
-            // Add the dependency for the Firebase SDK for Google Analytics
-            // When using the BoM, don't specify versions in Firebase dependencies
-            implementation 'com.google.firebase:firebase-analytics'
-
-
-            // Add the dependencies for any other desired Firebase products
-            // https://firebase.google.com/docs/android/setup#available-libraries
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildscript {
+        repositories {
+            google() // here
+            mavenCentral()
+        }
+        dependencies {
+            classpath 'com.android.tools.build:gradle:7.2.1'
+        }
+    }
+    allprojects {
+        repositories {
+            google() // and here
+            mavenCentral()
+        }
+    }
+    dependencies {
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'androidx.preference:preference:1.2.0'
+        implementation 'androidx.appcompat:appcompat:1.4.2'
+        implementation 'com.google.android.material:material:1.6.1'
+        implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+        implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+        // Displaying images
+        implementation 'com.github.bumptech.glide:glide:3.7.0'
+        testImplementation 'junit:junit:4.13.2'
+        androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+        // Import the Firebase BoM
+        implementation platform('com.google.firebase:firebase-bom:30.1.0')
+
+        // Add the dependency for the Firebase SDK for Google Analytics
+        // When using the BoM, don't specify versions in Firebase dependencies
+        implementation 'com.google.firebase:firebase-analytics'
+
+        // Declare the dependencies for any other desired Firebase products
+        // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
+        implementation 'com.google.firebase:firebase-auth'
+        implementation 'com.google.firebase:firebase-firestore'
+        implementation 'com.google.firebase:firebase-database'
+    }
+}
 
