--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ android {
         implementation 'com.google.firebase:firebase-auth'
         implementation 'com.google.firebase:firebase-firestore'
         implementation 'com.google.firebase:firebase-database'
+        implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     }
 }
 
