--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ android {
         implementation 'com.google.firebase:firebase-firestore'
         implementation 'com.google.firebase:firebase-database'
         implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+        implementation 'com.google.firebase:firebase-storage:20.0.1'
     }
 }
 
